* New method KnowWEUtils.getCookie(...) to retrieve cookies. Checks, that cookies are not null (e.g. in case of a new user), which is often forgotten. * Nice css transitions when collapsing columns in TestCasePlayer. * Header no longer line breaks with additional question columns.

--- a/KnowWE/KnowWE-Plugin-TestCases/src/main/resources/webapp/KnowWEExtension/css/testcaseplayer.css
+++ b/KnowWE/KnowWE-Plugin-TestCases/src/main/resources/webapp/KnowWEExtension/css/testcaseplayer.css
@@ -41,6 +41,7 @@
 .type_TestCasePlayer .wikitable * TH {
 	vertical-align: middle;
 	text-align: left;
+	white-space: nowrap;
 }
 
 .type_TestCasePlayer .wikitable * TH SELECT, .type_TestCasePlayer .wikitable * TH INPUT {
@@ -62,8 +63,8 @@
 }
 
 .type_TestCasePlayer .wikitable .collapsedcolumn {
-	padding-right: 0px;
 	max-width: 5px;
 	overflow: hidden;
 	max-height: 5px;
+	padding-right: 0px;
 }
